--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= link_to "Home", root_path %>
+<%= link_to("Home", root_path, class: "header-link") %>
 |   
 <%= link_to("About", about_path, class: "header-link") %>
-
+|
+<%= link_to("Blog Posts", blog_post_path, class: "header-link") %>
 <%= yield %>
-
 </body>
 </html>
