--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 |   
 <%= link_to("About", about_path, class: "header-link") %>
 |
-<%= link_to("Blog Posts", blog_post_path, class: "header-link") %>
+<%= link_to("Blog Posts", blog_posts_path, class: "header-link") %>
 <%= yield %>
 </body>
 </html>
